# brxngenerator

./: .gitignore  CLAUDE.md  ECC_INTEGRATION_SUMMARY.md  README.md  README.txt  ab_compare_ecc.py  binary_vae_utils.py  bvae_im.py  bvae_im_em.py  bvae_im_test.ipynb  config.py  drawPlot.py  environment.yaml  eval_ecc.py  eval_ecc_simple.py  gridsearch.sh  gurobi.lic  main.py  mainstream.ipynb  mainstream.py  mps_fix.py  mps_test.py  nohup.out  print_results.py  pyproject.toml  sample.py  test_ecc_integration.py  test_seed_new.sh  trainvae.py  trainvae_0.out  trainvae_1.out  trainvae_2.err  trainvae_2.out  trainvae_3.out  trainvae_4.out  trainvae_5.out  trainvae_6.out  trainvae_7.out  validate_ecc_theory.py
.claude/: settings.local.json
Results/: 42_qed.txt
Theano-master/: setup.py
bo/: gauss.py  run_bo.py  sparse_gp.py  sparse_gp_theano_internal.py
brxngenerator/: __init__.py
cache/: fm_model-QED-Gurobi-dim100-seed42  fm_model-QED-Gurobi-dim50-seed42  fm_model-logp-amplify-dim50-seed1-end0  fm_model-qed-amplify-dim100-seed1-end0
config/: config.yaml
data/: filter_dataset.py
docs/: ECC_INTEGRATION_SUMMARY.md  MPS_SETUP_GUIDE.md
experiments/: quick_ecc_test.py
fm_testing/: README.md  run_fm_hyperparams.py  test_fm_hyperparams.py  test_fm_standalone.py
instructions/: README.md  advanced-features.md  evaluation.md  getting-started.md  reference.md  training.md  troubleshooting.md
old_backup/: bvae_im.py
rxnft_vae/: chemutils.py  evaluate.py  fragment.py  ftdecoder.py  ftencoder.py  latent_metrics.py  metrics_eval.py  mpn.py  nnutils.py  reaction.py  (+5 more)
(+377 files in other folders)
