[project]
name = "brxngenerator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "amplify>=1.3.1",
    "gurobi-optimods>=2.0.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pylint>=3.3.7",
    "pyyaml>=6.0.2",
    "rdkit>=2025.3.3",
    "scikit-learn>=1.7.1",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
]
